# agent-based-extraction

./: .config.yaml  .gitignore  README.MD  anotacoes.md  classes.py  ner-abc-agent.ipynb  pyproject.toml  requirements.txt
app/: main.py
app/helpers/: classes.py  evaluation.py  utils.py
app/services/: agent.py
artefatos/: agent_predictions.csv
artefatos/ner_datasets/: investigacao_acidentes_ibama_agent.csv  obs_diarias_ner_abc_restaurado.csv
artefatos/ner_task/: observacoes_anotadas_argilla_comp_unico.csv
artefatos/prompts/aba/: extract_all_entities.txt  extract_antecedent.txt  extract_antecedent_consequence.txt  extract_behavior.txt  extract_consequence.txt  judge.txt
artefatos/prompts/ibama/: extract_all_entities.txt  extract_cause.txt  extract_cause_consequence.txt  extract_consequence.txt  extract_phenomenon.txt  (+1 more)
config/: llm_config.yaml
config/experiments/: aba_1_node.yaml  aba_2_nodes.yaml  aba_3_nodes.yaml  ibama_1_node.yaml  ibama_2_nodes.yaml  ibama_3_nodes.yaml
docs/: extracao_ner.md  servicos_externos.md
outputs/: agent_predictions_gen.csv  auditoria_juiz_gen.csv
outputs/experiments/: config_IBAMA_1_Node.json  config_IBAMA_1_Node_aws.json  config_IBAMA_1_Node_openai.json  config_IBAMA_2_Nodes.json  config_IBAMA_2_Nodes_aws.json  config_IBAMA_2_Nodes_openai.json  config_IBAMA_3_Nodes.json  config_IBAMA_3_Nodes_aws.json  config_IBAMA_3_Nodes_openai.json
services/: models.py
servicos_externos/argilla_deploy/: .config.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
servicos_externos/mlflow/: docker-compose.yml
(+3 files in other folders)
