[project]
name = "ner-agent-generic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.1",
    "ipykernel==6.29",
    "langchain-aws>=1.4.5",
    "langchain-openai>=1.2.1",
    "pandas>=3.0.2",
    "python-dotenv==1.2.1",
    "pyyaml>=6.0.3",
    "reportlab>=4.5.0",
    "svglib>=1.6.0",
    "tqdm>=4.67.3",
]
